--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,8 @@
     <meta name="description" content="WebRTC based alarm system">
     <meta name="viewport" content="width=device-width">
 
+    <link rel="manifest" href="manifest.json">
+    <link rel='stylesheet' href="test.css">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
 
