hacky way of displaying basic config

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
     <link rel="manifest" href="/manifest.json">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
 
     <title>Watchdog</title>
   </head>
