--- a/app/index.html
+++ b/app/index.html
@@ -2,20 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <title>Watchdog</title>
     <meta name="description" content="WebRTC based alarm system">
     <meta name="viewport" content="width=device-width">
 
     <link rel="manifest" href="/manifest.json">
-    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
-
-    <title>Watchdog</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
 
-    <script src="install-sw-push-notifications.js"></script>
+    <script src="/install-sw-push-notifications.js"></script>
     <script src="/static/bundle.js"></script>
   </body>
 </html>
