--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,8 @@
 
     <link rel="manifest" href="/manifest.json">
     <link rel="icon" href="/favicon.ico">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body>
     <div id="root"></div>
