--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,11 @@
         align-items: center;
         justify-content: center;
         height: 100vh;
+        -webkit-box-orient: vertical;
+        -moz-box-orient: vertical;
+        -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
       }
 
       .splash-screen > div {
@@ -26,7 +31,11 @@
   <body>
     <div id="root">
       <div class="splash-screen">
-        <div>Loading...</div>
+        <img src="/images/stolen-temporary-logo.jpg" width="200">
+        <br/>
+
+        <img src="/loader.svg" />
+
       </div>
     </div>
 
