--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -31,14 +31,8 @@
   <body>
     <div id="root">
       <div class="splash-screen">
-        <img src="/images/stolen-temporary-logo.jpg" width="200">
-        <br/>
-
-        <img src="/loader.svg" />
-
+        <img src="/images/stolen-temporary-logo.svg" width="200">
       </div>
     </div>
-
-    <script src="/static/bundle.js"></script>
   </body>
 </html>
