Make the font look less like comic sans

--- a/client/index.html
+++ b/client/index.html
@@ -25,7 +25,7 @@
         max-width: 50%;
       }
     </style>
-    <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body>
